--- a/docroot/themes/dcd16/assets/sass/_node.scss
+++ b/docroot/themes/dcd16/assets/sass/_node.scss
@@ -1,21 +1,23 @@
 @import "variables";
 
-article {
-  max-width: 800px;
-  margin: auto;
-  .author {
-    display: none;
-  }
-  .field {
-    @include tabular-field();
-  }
-  .field--type-text-with-summary {
-    display: block;
-    margin: 30px 0;
-  }
-  &.session {
+.path-node {
+  article {
+    max-width: 800px;
+    margin: auto;
     .author {
+      display: none;
+    }
+    .field {
+      @include tabular-field();
+    }
+    .field--type-text-with-summary {
       display: block;
+      margin: 30px 0;
+    }
+    &.session {
+      .author {
+        display: block;
+      }
     }
   }
 }
