--- a/docroot/themes/dcd16/assets/sass/_user.scss
+++ b/docroot/themes/dcd16/assets/sass/_user.scss
@@ -3,8 +3,14 @@
     display: none;
   }
   article {
+    max-width: 800px;
+    margin: auto;
     text-align: center;
     .field {
+      @include tabular-field();
+    }
+    .field--type-text-long {
+      display: block;
       margin: 40px 0;
     }
     .field--name-field-first-name, .field--name-field-last-name {
@@ -18,23 +24,18 @@
       width: auto;
     }
     .field--type-image {
+      display: block;
       img {
         margin: auto;
       }
     }
     .field--name-field-drupal-profile {
+      display: block;
       font-size: 20px;
       margin: 40px 0;
       a {
         word-wrap: break-word;
       }
-    }
-    .field--name-field-organization,
-    .field--name-field-designation,
-    .field--name-field-phone,
-    .field--name-field-facebook-link,
-    .field--name-field-twitter-link {
-      @include tabular-field();
     }
   }
 }
